# aws_agentcore_runtime

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  crew_agent.py  strand_agent.py
app/config/: crew_agents_config.json
aws/: __init__.py  deploy.py  execute.py  policy.json  trust.json
docker/: build.ipynb
docs/: folder_structure.html
src/: execute.py
src/agentcore/: deploy.py
src/docker/: build.ipynb
