[project]
name = "aws-agentcore-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "httpx>=0.28.1",
    "pip>=25.3",
    "pydantic>=2.12.3",
    "strands-agents>=1.14.0",
    "uvicorn[standard]>=0.38.0",
]
